--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+# ???? ??
+spring.h2.console.settings.web-allow-others=true
+# ??? ?? ?? ??
+spring.datasource.generate-unique-name = false
+# h2 console ??
+spring.h2.console.path=/h2-console
+# h2 url ??
+spring.datasource.url=jdbc:h2:mem:testdb
+# class ??
+spring.datasource.driverClassName=org.h2.Driver
 
+server.servlet.encoding.force-response=true
+spring.profiles.include=oauth
