--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,16 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.8'
+    implementation 'com.h2database:h2:2.1.214'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-mustache:2.7.8'
+    implementation 'org.springframework.boot:spring-boot-devtools:2.7.8'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.7.8'
+    testImplementation 'org.projectlombok:lombok:1.18.22'
+    compileOnly 'org.projectlombok:lombok:1.18.26';
+    annotationProcessor 'org.projectlombok:lombok:1.18.26';
+    testImplementation 'junit:junit:4.13.1'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
